# Edge_Viewer

./: .gitignore  README.md  c_cpp_properties.json  gradle.properties  launch.json  local.properties  settings.gradle  task.json
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image_processor.cpp  image_processor.h  native-lib.cpp
app/src/main/java/example/edgeviewer/: CameraXAnalyzer.kt  NativeBridge.kt  SimpleGLRenderer.kt  mainactivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout/values/: strings.xml
gl/: GLRenderer.kt  ImageProcessor.kt  ShaderUtils.kt
jni/: CMakeLists.txt  image_processor.cpp  image_processor.h
web/: index.html  package.json  tsconfig.json
web/src/: main.ts
